post(api): list and store
