# app/Http/Resources/Api/PostResource.php
@@ -1,0 +1,26 @@
+<?php
+
+namespace App\Http\Resources\Api;
+
+use Illuminate\Http\Request;
+use Illuminate\Http\Resources\Json\JsonResource;
+
+class PostResource extends JsonResource
+{
+    /**
+     * Transform the resource into an array.
+     *
+     * @return array<string, mixed>
+     */
+    public function toArray(Request $request): array
+    {
+        return [
+            'id' => $this->id,
+            'title' => $this->name,
+            'category_id' => $this->category_id,
+            'slug' => $this->slug,
+            'image' => $this->image,
+            'updated_at' => $this->updated_at
+        ];
+    }
+}
